# MySaaSApp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
enc_temp_folder/17ca5b4e3c5f2676b35dcb199c007/: DatabaseManager.cpp
enc_temp_folder/6520e243fddd30b758f4062ed1c93a3/: DatabaseManager.h
enc_temp_folder/c76c278641f229397dd46dcf72d733ff/: UserRoutes.cpp
src/: AdminUI.cpp  main.cpp  main.h
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/models/: DTOs.h  Kanban.h  Message.H  Payment.h  Requests.h  Server.h  User.h
src/routes/: AdminRoutes.cpp  AdminRoutes.h  AuthRoutes.cpp  AuthRoutes.h  KanbanRoutes.cpp  KanbanRoutes.h  MessageRoutes.cpp  MessageRoutes.h  PaymentRoutes.cpp  PaymentRoutes.h  ReportRoutes..cpp  ReportRoutes.h  RoleRoutes.cpp  RoleRoutes.h  ServerRoutes.cpp  ServerRoutes.h  UploadRoutes.cpp  UploadRoutes.h  UserRoutes.cpp  UserRoutes.h  WsRoutes.cpp  WsRoutes.h
src/utils/: FileManager.cpp  FileManager.h  LogManager.cpp  LogManager.h  Security.cpp  Security.h
